--- a/index.html
+++ b/index.html
@@ -43,16 +43,31 @@
     </div>
     <div class="container_Net">
       <div class="container_content">
-        <div class="Net_Is_txt">
-        PiperNet Is Here
-        </div>
+        <div class="Net_Is_txt">PiperNet Is Here</div>
       </div>
-    
+    </div>
+    <div class="Problem">
+      <div class="container_content">
+        <div class="Problem_txt">
+          The Problem
+        </div>
+        <div class="Problem_par_txt">
+          Beneath the flashy homepages of your favorite sites lurk Hooli™ and
+          other evil corporations out to hoard and sell your most personal data.
+          What was built to be the ultimate platform for the free sharing of
+          knowledge has turned into a money-hungry monster feasting on our privacy
+          and freedom. But fear not, for Pied Piper has the answer! And it’s
+          simple: An autonomous peer-to-peer network featuring distributed storage
+          powered by universal compression, accelerated scheduling allocation, and
+          end-to-end encryption. Put even simpler — it’s the internet, completely
+          decentralized.
+        </div>
     </div>
     <div class="all_together">
       <div class="container_content">
         <div class="all_together_txt">
-          We’re in this together! All of our computers and phones join in a network to make the strongest supercomputer the world has ever seen.
+          We’re in this together! All of our computers and phones join in a
+          network to make the strongest supercomputer the world has ever seen.
         </div>
       </div>
     </div>
@@ -60,9 +75,9 @@
   <footer>
     <div class="container_content">
       <div class="footer-txt">
-      All other trademarks and copyrights are the property of their respective
-      owners. Use of these names, trademarks and brands does not imply
-      endorsement.
+        All other trademarks and copyrights are the property of their respective
+        owners. Use of these names, trademarks and brands does not imply
+        endorsement.
       </div>
     </div>
   </footer>
