--- a/index.html
+++ b/index.html
@@ -75,9 +75,16 @@
       <div class="Introducing_PiedPiperCoin">
         Introducing PiedPiperCoin
       </div>
-      <div class="Introducing_PiedPiperCoin_txt">
+      <div class="Introducing_PiedPiperCoin_txt_p1">
+        <div class="PPC_logo">
+          <img
+          src="img/PPC_Logo.png"
+          >
+        </div>
         Pied Piper's new internet is built for users, by users.
         You supply the storage, compute, and networking resources that power our entire decentralized web.
+      </div>  
+      <div class="Introducing_PiedPiperCoin_txt_p2">  
         Now there's a way to give credit where credit is due. Compute credit, that is!
         The more you share your device resources, the more PiedPiperCoin you receive.
         Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone you'll love all you can do with PiedPiperCoin.
