--- a/index.html
+++ b/index.html
@@ -71,23 +71,70 @@
         </div>
       </div>
     </div>
-    <div class="container_content">
-      <div class="Introducing_PiedPiperCoin">
-        Introducing PiedPiperCoin
+    <div class="Introducing_PiedPiperCoin">
+    Introducing PiedPiperCoin
+      <div class="container_content">
+        <div class="Introducing_PiedPiperCoin_txt_p1">
+          <div class="PPC_logo">
+            <img
+            src="img/PPC_Logo.png"
+            >
+          </div>
+          Pied Piper's new internet is built for users, by users.
+          You supply the storage, compute, and networking resources that power our entire decentralized web.
+        </div>  
+        <div class="Introducing_PiedPiperCoin_txt_p2">  
+          Now there's a way to give credit where credit is due. Compute credit, that is!
+          The more you share your device resources, the more PiedPiperCoin you receive.
+          Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone you'll love all you can do with PiedPiperCoin.
+        </div>
       </div>
-      <div class="Introducing_PiedPiperCoin_txt_p1">
-        <div class="PPC_logo">
+    </div>
+    <div class="The_team">
+        The Team
+      <div class="container_content">
+        </div class="faces">
+            <img
+              src="img/Richard Hendricks.png";
+              width= 168px;
+              height= 168px;
+            >
+        </div>
+        <div class="faces">
+            <img
+              src="img/Dinesh Chugtai.png";
+              width= 168px;
+              height= 168px;
+            >
+        </div>
+        <div class="faces">
+            <img
+              src="img/Dinesh Chugtai.png";
+              width= 168px;
+              height= 168px;
+            >
+        </div>
+        <div class="faces">
           <img
-          src="img/PPC_Logo.png"
+            src="img/Dinesh Chugtai.png";
+            width= 168px;
+            height= 168px;
           >
         </div>
-        Pied Piper's new internet is built for users, by users.
-        You supply the storage, compute, and networking resources that power our entire decentralized web.
-      </div>  
-      <div class="Introducing_PiedPiperCoin_txt_p2">  
-        Now there's a way to give credit where credit is due. Compute credit, that is!
-        The more you share your device resources, the more PiedPiperCoin you receive.
-        Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone you'll love all you can do with PiedPiperCoin.
+        <div class="faces">
+          <img
+            src="img/Dinesh Chugtai.png";
+            width= 168px;
+            height= 168px;
+          >
+        </div>
+        <div class="faces">
+          <img
+            src="img/Dinesh Chugtai.png";
+            width= 168px;
+            height= 168px;
+          >
+        </div>
       </div>
     </div>
   </body>
